--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  internet_connection_checker: ^3.0.1
+  shared_preferences: ^2.5.3
+  get_it: ^8.0.3
+  firebase_database: ^11.3.7
+  equatable: ^2.0.7
+  flutter_bloc: ^9.1.1
+  uuid: ^4.5.1
+  firebase_core: ^3.12.1
+  cloud_firestore: ^5.6.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
